# mcp_custom_compiler

./: .gitignore  README.md  pyproject.toml
src/: server.py
src/compiler/: ast_nodes.py  codegen.py  compiler.py  lexer.py  parser.py  semantic.py
tests/: test_codegen.py  test_compiler.py  test_lexer.py  test_parser.py  test_semantic.py
